Revert "Fixed Searchbar alignment"
This reverts commit a03b616d85e9f0fe5ceeb757d1b0ad8162ee57bf.

--- a/src/app/components/hris/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/components/hris/admin-dashboard/admin-dashboard.component.css
@@ -197,8 +197,7 @@ div#results-container {
   min-height: 88px;
   flex-direction: column;
   margin: 0px 0px 0px 0px;
-  margin-top: -24px;
-  margin-left: 12px;
+  margin-left: 25px;
 }
 
 #search-results>div {
@@ -237,7 +236,7 @@ div#results-container {
   box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.15);
 
   margin-top: 16px;
-  margin-left: 12px;
+  margin-left: 25px;
 }
 
 .view-divider {
